@@ -40,11 +40,17 @@
             "rct2.scenery_small.roof13",
             "fidwell.scenery_small.roof13",
             "toontowner.scenery_small.ttrfwd01",
+            "fidwell.scenery_small.ttrfwd01",
             "toontowner.scenery_small.ttrfwd02",
+            "fidwell.scenery_small.ttrfwd02",
             "toontowner.scenery_small.ttrfwd03",
+            "fidwell.scenery_small.ttrfwd03",
             "toontowner.scenery_small.ttrfwd04",
+            "fidwell.scenery_small.ttrfwd04",
             "toontowner.scenery_small.ttrfwd06",
+            "fidwell.scenery_small.ttrfwd06",
             "toontowner.scenery_small.ttrfwd07",
+            "fidwell.scenery_small.ttrfwd07",
             "toontowner.scenery_small.ttrfwd08",
             "fidwell.scenery_small.ttrfwd08"
         ],
