@@ -12,6 +12,12 @@
 - New object: Dinosaur (rct2.scenery_large.sdn1)
 - New object: Dinosaur (rct2.scenery_large.sdn2)
 - New object: Dinosaur (rct2.scenery_large.sdn3)
+- New object: Roof (toontowner.scenery_small.ttrfwd01)
+- New object: Roof (toontowner.scenery_small.ttrfwd02)
+- New object: Roof (toontowner.scenery_small.ttrfwd03)
+- New object: Roof (toontowner.scenery_small.ttrfwd04)
+- New object: Roof (toontowner.scenery_small.ttrfwd06)
+- New object: Roof (toontowner.scenery_small.ttrfwd07)
 - New object: Roof (toontowner.scenery_small.ttrfwd08)
 - New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
 - New object: Roman Palace Corner Piece (rct2tt.scenery_large.corns2x2)
